--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/assets/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Explore the future with Trillion Edition – a platform delivering the latest in innovation, creativity, and global trends.">
     <title>TrillionEdition</title>
   </head>
   <body>
