--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
     })(window, document, "clarity", "script", "sd2br7snuh");
 </script>
   </head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-V5ZXH0WQYJ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-V5ZXH0WQYJ');
+</script>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
